	Content" algorithm. Still needs functional group and aromatic ring
	recognition passes.
	<http://www.daylight.com/meetings/mug01/Sayle/m4xbondage.html>

	* src/mopac.cc: Fix bugs in read/write methods as pointed out by
	Radek Liboska. Should solve PR #515884.

	* src/atom.cpp (GetType): Fix bug with atom typing by assigning
	the ATN type of an atom if the atom typer didn't pick one before.
	
2002-02-13  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/data.cpp, src/data.h, src/element.txt: Added support for
	electronegativity of elements. (Needed for assigning bond types,
	among other things.)

	* src/element.h: Regenerate using bin2hex.pl.

	* src/ghemical.cpp: Don't try to type atoms, it only causes
	problems with the internal atom typing.

2002-02-07  Geoff Hutchison  <hutchisn@chem.northwestern.edu>
	
	* src/Makefile.in: Add c3d.cpp to the compilation list.

	* src/obutil.cpp: Migrate quat.c code here temporarily.
	
	* src/mol.cpp, src/mol.h: Resolve problems with declarations of
	old quat.c code since they now fall under OpenBabel namespace.

2002-02-01  Michael Banck  <mbanck@gmx.net>

	* test/Makefile.in, src/Makefile.in: Delete Makefile when calling
	distclean target.

	* Makefile.in: Fix install target to create the $(mandir) directory.

2002-02-01  Michael Banck  <mbanck@gmx.net>

	* Makefile.in: Added manpage to install target.

	* configure, configure.in, Makefile.in, src/Makefile.in,
	src/version.h.in: Put version information in configure.in and made
	generated tarballs contain it.
	
2002-01-24  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* doc/FAQ, doc/babel.1: Minor documentation fixes.
	
2002-01-21  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* Makefile.in: Fix problems with the dist target.

	* configure, configure.in: Add 'top_builddir' macro to know where
	objdir is in the case that we're not building in the source
	directory.

	* src/Makefile.in: Run the library through 'ranlib', which fixes